--- a/Software/RaspberryPi/frontend/Dockerfile
+++ b/Software/RaspberryPi/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM balenalib/raspberrypi3-node
 ENV NODE_ENV=production
 WORKDIR /app
-COPY --from=build /build/package*.json ./
-COPY --from=build /build/.next ./.next
-COPY --from=build /build/public ./public
+COPY package*.json ./
+COPY .next ./.next
+COPY public ./public
 RUN install_packages next
 
 EXPOSE 3000
