--- a/.github/workflows/release-frontend.yml
+++ b/.github/workflows/release-frontend.yml
@@ -33,6 +33,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
+        context: ./Software/RaspberryPi/frontend
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/vovendev-frontend:arm        
     - name: Image digest
