--- a/.github/workflows/release-frontend.yml
+++ b/.github/workflows/release-frontend.yml
@@ -34,6 +34,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./Software/RaspberryPi/frontend
+        file: ./Software/RaspberryPi/frontend/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/vovendev-frontend:arm        
     - name: Image digest
