--- a/Software/RaspberryPi/frontend/Dockerfile
+++ b/Software/RaspberryPi/frontend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY package*.json ./
 COPY .next ./.next
 COPY public ./public
-RUN install_packages next
+RUN npm install next
 
 EXPOSE 3000
 CMD npm run start
